--- a/example/index.html
+++ b/example/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"></script>
-  <script src="script.js" type="module"></script>
+  <script src="script.js"></script>
 </body>
 </html>
